@startuml

title __STEP's Class Diagram__\n

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Bottling {
            - size : int
            - description : String
            + getSize()
            + setSize()
            + getDescription()
            + setDescription()
            + toString()
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Brewing {
            - timeH : int
            - timeMin : int
            - heat : int
            - water : int
            - hopperId : String
            - description : String
            + getTimeH()
            + setTimeH()
            + getTimeMin()
            + setTimeMin()
            + getHeat()
            + setHeat()
            + getWater()
            + setWater()
            + getHopperId()
            + setHopperId()
            + getDescription()
            + setDescription()
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Colding {
            - timeH : int
            - timeMin : int
            - heat : int
            - description : String
            + getTimeH()
            + setTimeH()
            + getTimeMin()
            + setTimeMin()
            + getHeat()
            + setHeat()
            + getDescription()
            + setDescription()
            + toString()
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Crushing {
            - description : String
            - malt : String
            + getDescription()
            + setDescription()
            + getMalt()
            + setMalt()
            + toString()
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Density {
            - description : String
            - density : String
            + getDescription()
            + setDescription()
            + getDensity()
            + setDensity()
            + toString()
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Fermenting {
            - day : int
            - temperature : int
            - pressure : int
            - description : String
            + getTemperature()
            + setTemperature()
            + getPressure()
            + setPressure()
            + getDay()
            + setDay()
            + getDescription()
            + setDescription()
            + toString()
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Filtering {
            - description : String
            + getDescription()
            + setDescription()
            + toString()
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Hopping {
            - test : String
            + getTest()
            + setTest()
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Leavening {
            - test : String
            + getTest()
            + setTest()
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Sanitizing {
            - description : String
            + getDescription()
            + setDescription()
        }
      }
    }
  }
  

  Bottling -up-|> Step
  Brewing -up-|> Step
  Colding -up-|> Step
  Crushing -up-|> Step
  Density -up-|> Step
  Fermenting -up-|> Step
  Filtering -up-|> Step
  Hopping -up-|> Step
  Leavening -up-|> Step
  Sanitizing -up-|> Step


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
